@@ -78,7 +78,7 @@ static int map_if_lk24(int sg_fd, const char * device_name, int rw,
 #include "sg_pr2serr.h"
 #include "sdparm.h"
 
-static const char * version_str = "1.11 20160229 [svn: r286]";
+static const char * version_str = "1.11 20160327 [svn: r287]";
 
 
 #define MAX_DEV_NAMES 256
